<?xml version="1.0" encoding="utf-8"?>

<!--
15-05-2019
Muhammad Ilyas
10116339
IF -8
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app"
        android:layout_marginTop="120dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/versi"
            android:textAlignment="center"
            android:textColor="@color/colortext"
            android:textSize="12sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/tentang"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

</LinearLayout>
