<?xml version="1.0" encoding="utf-8"?>

<!--
15-05-2019
Muhammad Ilyas
10116339
IF -8
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    >

    <LinearLayout
        android:layout_marginTop="55dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

        <TextView
            android:id="@+id/nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contact name"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="90dp"
            />

        <TextView
            android:id="@+id/nim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="NIM"
            android:textColor="@android:color/white"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@android:color/white"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/kelas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kelas"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/telepon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telepon"
                android:textColor="@android:color/black"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fb"
                android:textColor="@android:color/black"
                android:layout_marginTop="5dp"
                />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/gambar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/dog"
        android:padding="15dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        />



</RelativeLayout>